fix alignment of the footer in the question theme

--- a/themes/question/files/resources/question.css
+++ b/themes/question/files/resources/question.css
@@ -41,3 +41,10 @@
         font-size: 1em;
     }
 }
+
+@media screen {
+    .show-nav.show-sidebar #questionContainer, .show-nav.show-sidebar > footer {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
